--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  background-color: #000;
   color-scheme: light dark;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
