feat: create mock movies results list layout

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -50,6 +50,7 @@ $yellow_primary: #fcc434;
       background-color: $yellow_primary;
       color: #000;
       border: none;
+      cursor: pointer;
       border-radius: 8px;
       padding: 8px 16px;
     }
