--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -1,5 +1,7 @@
 .main {
-  margin-top: 32px;
+  max-width: 1280px;
+  margin: 32px auto 0;
+  padding-bottom: 128px;
   &:not(:has(> .main__movies)) {
     display: flex;
     justify-content: center;
