refactor: improve about spinner style

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -2,7 +2,7 @@
   max-width: 1280px;
   margin: 32px auto 0;
   padding-bottom: 128px;
-  &:not(:has(> .main__movies)) {
+  &.main--loading {
     display: flex;
     justify-content: center;
   }
